Fix: React router dom issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv-builder-2",
-  "homepage": "http://cdevelopment010.github.io/cv-builder-2/",
+  "homepage": "http://cdevelopment010.github.io/cv-builder-2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
